Mon Mar 13 15:22:00 2000  Sergei Organov <osv@javad.ru>

        * libm/mathfp/sf_sqrt.c: Change _DOUBLE_IS_32BITS sqrt call to sqrtf.

Fri Mar 10 16:09:20 2000  Jeff Johnston <jjohnstn@cygnus.com>

	* libc/include/string.h: Include <sys/types.h>.

Fri Mar 10 14:53:50 2000  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* libc/stdio/putw.c (putw): Return 0 on success, to be compliant
	with XSH5, not SVID.

Thu Mar  9 17:20:41 2000  Jeff Johnston <jjohnstn@cygnus.com>

        * libc/include/string.h: Changed last argument back to ssize_t
	to make it compatible with XPG4 definition which is 
	defined in <unistd.h>.  There is a conflict in the SVID 3
	and XPG4 definitions and newlib will settle with XPG4.
        * libc/string/swab.c: Ditto.

Wed Mar  8 17:11:41 2000  Jeff Johnston <jjohnstn@cygnus.com>

        * libc/include/string.h: Changed last argument to size_t.
        * libc/string/swab.c: Changed last argument to size_t.

Wed Mar  8 00:46:41 2000  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* libc/reent/Makefile.am (lib_a_SOURCES): Added unlinkr.c.
	(CHEWOUT_FILES): Added unlinkr.def.
	* libc/reent/Makefile.in: Rebuilt.
	* libc/sys.tex: Include unlinkr.def.
	* libc/reent/linkr.c (_unlink_r): Moved to...
	* libc/reent/unlinkr.c: ... new file.

Wed Mar  8 00:43:07 2000  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* libc/string/Makefile.am (lib_a_SOURCES): Added swab.c.
	(CHEWOUT_FILES): Added swab.def.
	* libc/string/Makefile.in: Rebuilt.
	* libc/string/string.tex: Include swab.def.
	* libc/include/string.h (swab): Declare.
	* libc/string/swab.c: New file.

Wed Mar  8 00:38:35 2000  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* libc/stdio/Makefile.am (lib_a_SOURCES): Added getw.c and putw.c.
	(CHEWOUT_FILES): Added getw.def and putw.def.
	* libc/stdio/Makefile.in: Rebuilt.
	* libc/stdio/stdio.tex: Include getw.def and putw.def.
	* libc/stdio/getw.c: New file.
	* libc/stdio/putw.c: New file.

Fri Feb 25 14:50:50 2000  Jeff Johnston <jjohnstn@cygnus.com>
